# optimizerzero

./: .gitignore  LICENSE  README.md  _headers  app.js  avif-jxl-worker.js  build-windows.ps1  cleanup.ps1  deploy-cloudflare.ps1  gui_entry.py  index.html  manifest.webmanifest  netlify.toml  optimize-core.js  package-release.ps1  package-web.ps1  pyproject.toml  run-gui.cmd  run-safe-scan.cmd  service-worker.js  styles.css  verify-release.ps1  verify-web.ps1  worker.js  wrangler.toml
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-cloudflare.yml  deploy-pages.yml
docs/: CLOUDFLARE_PRIVATE_CHECKLIST_KO.md  DEPLOY_FREE_KO.md  DIST_README.txt  GITHUB_RELEASE_DRAFT.md  GITHUB_SECRETS_CLOUDFLARE_KO.md  LOCAL_FIRST_ARCHITECTURE_KO.md  PRIVACY_KO.md  PRIVATE_DEPLOY_KO.md  PRODUCT.md  STRATEGY_KO.md  X_SHARE_DRAFTS_KO.md
functions/: _middleware.js
src/optimizerzero/: cli.py  core.py  gui.py
tests/: test_cli.py  test_core.py  test_gui.py  test_web_assets.py
tools/: create_demo_assets.py
web/: PRIVACY.md  README.md  _headers  app.js  avif-jxl-worker.js  index.html  optimize-core.js  service-worker.js  styles.css  worker.js
