[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "optimizerzero"
version = "0.1.0"
description = "Safety-first local compression and archive optimizer"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OptimizerZero" }]
dependencies = ["Pillow>=10"]

[project.optional-dependencies]
pdf = ["PyMuPDF>=1.23", "pikepdf>=10.9"]
heic = ["pillow-heif>=0.20"]
build = ["pyinstaller>=6.0"]

[project.scripts]
optimizerzero = "optimizerzero.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
